--- a/yf-boot-api/src/main/resources/application.yml
+++ b/yf-boot-api/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
     default-property-inclusion: non_null
     deserialization:
       fail_on_unknown_properties: false
+      accept-empty-string-as-null-object: true
     parser:
       # 允许出现特殊字符和转义符
       allow_unquoted_control_chars: true
