调整日志输出

--- a/yf-boot-api/src/main/resources/application-dev.yml
+++ b/yf-boot-api/src/main/resources/application-dev.yml
@@ -65,6 +65,5 @@ swagger:
 # 日志配置
 logging:
   level:
-    root: debug
-  file:
-    path: logs/${spring.application.name}/
+    root: info
+  path: logs/${spring.application.name}/
