--- a/yf-boot-api/pom.xml
+++ b/yf-boot-api/pom.xml
@@ -142,12 +142,10 @@
             </exclusions>
         </dependency>
 
-        <!--spring security-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
-
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -246,8 +244,6 @@
             <version>2.9.8</version>
         </dependency>
 
-
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -255,57 +251,11 @@
             <scope>provided</scope>
         </dependency>
 
-
-
-
-
-
-
-
-
-
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-core</artifactId>
             <version>4.4.9</version>
         </dependency>
-
-
-        <!-- OSS文件上传及文档转换 -->
-        <dependency>
-            <groupId>com.aliyun.oss</groupId>
-            <artifactId>aliyun-sdk-oss</artifactId>
-            <version>${oss.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-imm</artifactId>
-            <version>1.22.0</version>
-        </dependency>
-
-
-        <!-- 腾讯云 -->
-        <dependency>
-            <groupId>com.qcloud</groupId>
-            <artifactId>cos_api</artifactId>
-            <version>5.6.52</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.qcloud</groupId>
-            <artifactId>cos-sts_api</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-
-
-        <!-- 七牛云 -->
-        <dependency>
-            <groupId>com.qiniu</groupId>
-            <artifactId>qiniu-java-sdk</artifactId>
-            <version>[7.4.0, 7.4.99]</version>
-        </dependency>
-
 
         <!-- 图形验证码 -->
         <dependency>
