--- a/yf-boot-vue/package.json
+++ b/yf-boot-vue/package.json
@@ -50,6 +50,7 @@
     "qs": "^6.11.2",
     "sortablejs": "^1.15.0",
     "url": "^0.11.1",
+    "uuid": "^9.0.0",
     "vue": "3.3.4",
     "vue-i18n": "9.2.2",
     "vue-json-pretty": "^2.2.4",
